Reader: Fix Follow button alignment in Search recs

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -157,7 +157,8 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		margin-bottom: 16px;
 
 		.follow-button {
-			margin-top: -9px;
+			height: 25px;
+			margin-top: -4px;
 
 			@include breakpoint( "<480px" ) {
 				margin-right: 0;
